# DS_Client

./: .gitignore  Client.pro  LICENSE  README.md  main.cpp
Controllers/NetworkingControllers/: Messenger.cpp  Messenger.h  Networking.cpp
Controllers/NetworkingControllers/Input/: MessageReceiver.cpp
Controllers/NetworkingControllers/Output/: MessageSender.cpp
Factories/: SocketFactory.cpp
Models/MessageModels/Deserializer/: MessageDeserializer.cpp
Models/MessageModels/Messages/: FunctionCallMessage.cpp
Project/: CMakeLists.txt  main.cpp
Project/Constants/: ProtocolConstants.cpp  ProtocolConstants.h
Project/Controllers/: Session.cpp  Session.h
Project/Controllers/NetworkingControllers/: MessageSender.h  Messenger.cpp  Messenger.h  Networking.cpp  Networking.h  SocketListener.h
Project/Controllers/NetworkingControllers/Input/: MessageReceiver.cpp  MessageReceiver.h  SocketListener.cpp  SocketListener.h
Project/Controllers/NetworkingControllers/Output/: MessageSender.cpp  MessageSender.h
Project/Controllers/ThreadControllers/: SynchronizedQueue.cpp  SynchronizedQueue.h
Project/Factories/: SocketFactory.cpp  SocketFactory.h
Project/Models/: Group.h  Recipient.h  Session.cpp  Session.h  User.h
Project/Models/MessageModels/: Message.cpp  Message.h
Project/Models/MessageModels/Deserializer/: MessageDeserializer.cpp  MessageDeserializer.h
Project/Models/MessageModels/Messages/: GroupMessage.cpp  LoginMessage.cpp  LoginMessage.h  PrivateMessage.cpp  PrivateMessage.h  RegisterMessage.cpp  RegisterMessage.h
Project/Models/RecipientModels/: Group.cpp  Recipient.h  User.cpp  User.h
Qt Project/Networks_Client/: Networks_Client.pro  _pch.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Qt Project/Networks_Client/Constants/: ProtocolConstants.h
Qt Project/Networks_Client/Controllers/: ApplicationController.cpp  ApplicationController.h  Session.h  WindowController.cpp  WindowController.h
Qt Project/Networks_Client/Controllers/NetworkingControllers/: Messenger.cpp  Messenger.h  Networking.cpp  Networking.h
Qt Project/Networks_Client/Controllers/NetworkingControllers/Input/: MessageReceiver.cpp  SocketListener.cpp  SocketListener.h
Qt Project/Networks_Client/Controllers/UIControllers/: LoginWindowController.cpp  LoginWindowController.h
Qt Project/Networks_Client/Factories/: SocketFactory.cpp  SocketFactory.h
Qt Project/Networks_Client/Models/MessageModels/: Message.cpp  Message.h
Qt Project/Networks_Client/Models/MessageModels/Messages/: GroupMessage.h  LoginMessage.cpp
Qt Project/Networks_Client/Models/RecipientModels/: Recipient.h  User.h
Qt Project/Networks_Client/Views/: LoginWindow.cpp  LoginWindow.h
Qt Project/build-Networks_Client-Desktop_Qt_5_4_0_MSVC2013_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt Project/build-Networks_Client-Desktop_Qt_5_4_0_MSVC2013_64bit-Debug/debug/: moc_mainwindow.cpp
Qt Project/build-Networks_Client-Desktop_Qt_5_4_0_MSVC2013_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
